--- a/app/View/menu/menu.twig
+++ b/app/View/menu/menu.twig
@@ -10,11 +10,14 @@
     </div>
     <div id="gnavi" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="/login/">ログイン</a></li>
-            <li><a href="/register/">会員登録</a></li>
-            {# ここに↓メニュー追加していく #}
-            {# ここに↑メニュー追加していく #}
-            <li><a href="/logout/">ログアウト</a></li>
+            {% if session.user_id  =="" %}
+                <li><a href="/login/">ログイン</a></li>
+                <li><a href="/register/">会員登録</a></li>
+            {% else %}
+                {# ここに↓メニュー追加していく #}
+                {# ここに↑メニュー追加していく #}
+                <li><a href="/logout/">ログアウト</a></li>
+            {% endif %}
         </ul>
     </div>
 </nav>
