--- a/app/View/register/register_done.twig
+++ b/app/View/register/register_done.twig
@@ -2,7 +2,7 @@
 {% extends "layout/layout.twig" %}
 
 {#HTMLのタイトルを定義します。#}
-{% block title %}新規会員登録{% endblock %}
+{% block title %}新規会員登録有難う御座います！{% endblock %}
 
 {# このページに適用させたいスタイルシートを指定します #}
 {% block header_scripts_add %}
@@ -32,6 +32,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="well">
+                        登録有難う御座います！！
                     </div>
                 </div>
             </div>
