--- a/app/View/menu/menu.twig
+++ b/app/View/menu/menu.twig
@@ -10,7 +10,7 @@
     </div>
     <div id="gnavi" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            {% if session.user_id  =="" %}
+            {% if session.user_info  =="" %}
                 <li><a href="/login/">ログイン</a></li>
                 <li><a href="/register/">会員登録</a></li>
             {% else %}
