add login validation

--- a/app/View/layout/layout.twig
+++ b/app/View/layout/layout.twig
@@ -6,6 +6,20 @@
     <title>{% block title %}{% endblock %}</title>
     {% block header_scripts_add %}{% endblock %}
     <!-- BootStrap3 -->
+    <style>
+        .box {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .list-unstyled {
+            line-height: 2;
+        }
+
+        .mb10 {
+            margin: 0 0 10px 0;
+        }
+    </style>
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
