add register validation and auto login when register has done

--- a/app/View/register/register_done.twig
+++ b/app/View/register/register_done.twig
@@ -17,8 +17,8 @@
         <div class="box">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="well">
-                        登録有難う御座います！！
+                    <div class="alert alert-success" role="alert">
+                        会員登録有難う御座います。
                     </div>
                 </div>
             </div>
