--- a/app/View/register/register.twig
+++ b/app/View/register/register.twig
@@ -19,9 +19,14 @@
                 <div class="col-md-12">
                     <div class="well">
                         <form id="loginForm" method="POST" action="/register/">
+                            {% if error %}
+                                <div class="form-group">
+                                    <div class="alert alert-danger" role="alert">{{ error }}</div>
+                                </div>
+                            {% endif %}
                             <div class="form-group">
                                 <label for="email" class="control-label"><span class="btn-xs round btn-danger">必須</span> メールアドレス</label>
-                                <input type="email" class="form-control" id="email" name="email" value="" required title="Please enter you email" placeholder="example@gmail.com">
+                                <input type="email" class="form-control" id="email" name="email" value="{{ email }}" required title="Please enter you email" placeholder="example@gmail.com">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="control-label"><span class="btn-xs round btn-danger">必須</span> パスワード</label>
@@ -33,19 +38,19 @@
                             </div>
                             <div class="form-group">
                                 <label for="password" class="control-label"><span class="btn-xs round btn-danger">必須</span> ニックネーム</label>
-                                <input type="text" class="form-control" id="name" name="name" value="" required title="Please enter your name" placeholder="Toru">
+                                <input type="text" class="form-control" id="name" name="name" value="{{ name }}" required title="Please enter your name" placeholder="Toru">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="control-label"><span class="btn-xs round btn-danger">必須</span> 郵便番号</label>
-                                <input type="text" class="form-control " id="zipcode" name="zipcode" value="" style="width: 30%" required title="Please enter your zipcode" placeholder="110-0011">
+                                <input type="text" class="form-control " id="zipcode" name="zipcode" value="{{ zipcode }}" style="width: 30%" required title="Please enter your zipcode" placeholder="110-0011">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="control-label"><span class="btn-xs round btn-danger">必須</span> 住所</label>
-                                <input type="text" class="form-control" id="address" name="address" value="" required title="Please enter your address" placeholder="東京都千代田区霞が関２丁目１−１">
+                                <input type="text" class="form-control" id="address" name="address" value="{{ address }}" required title="Please enter your address" placeholder="東京都千代田区霞が関２丁目１−１">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="control-label"><span class="btn-xs round btn-danger">必須</span> 電話番号</label>
-                                <input type="tel" class="form-control" id="tel" name="tel" value="" required title="Please enter your tel no" placeholder="03-1234-5678">
+                                <input type="tel" class="form-control" id="tel" name="tel" value="{{ tel }}" required title="Please enter your tel no" placeholder="03-1234-5678">
                             </div>
                             <div class="form-group">
                                 <label for="password" class="control-label">利用規約</label>
