add resign method

--- a/app/View/menu/menu.twig
+++ b/app/View/menu/menu.twig
@@ -17,6 +17,7 @@
                 {# ここに↓メニュー追加していく #}
                 {# ここに↑メニュー追加していく #}
                 <li><a href="/logout/">ログアウト</a></li>
+                <li><a href="/resign/">退会</a></li>
             {% endif %}
         </ul>
     </div>
