fix path problems

--- a/app/View/register/register_done.twig
+++ b/app/View/register/register_done.twig
@@ -20,6 +20,11 @@
                     <div class="alert alert-success" role="alert">
                         会員登録有難う御座います。
                     </div>
+                    <br>
+                    <br>
+                    <p class="text-center">
+                        <a href="/" class="btn btn-info">TOPへ</a>
+                    </p>
                 </div>
             </div>
         </div>
