--- a/app/View/menu/menu.twig
+++ b/app/View/menu/menu.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">TOP</a>
+    <a class="navbar-brand" href="/">TOP</a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navber" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -15,6 +15,14 @@
                 </li>
             {% else %}
                 {# ここに↓メニュー追加していく #}
+                {# 一覧ページを出すサンプルURLです #}
+                <li class="nav-item">
+                    <a class="nav-link" href="/item/list/">一覧ページ</a>
+                </li>
+                {# サンプルとして詳細ページの商品番号1番を出すURLです#}
+                <li class="nav-item">
+                    <a class="nav-link" href="/item/detail/1">詳細ページ</a>
+                </li>
                 {# ここに↑メニュー追加していく #}
                 <li class="nav-item">
                     <a class="nav-link" href="/logout/">ログアウト</a>
