change footer to sticky

--- a/app/View/layout/footer.twig
+++ b/app/View/layout/footer.twig
@@ -1,6 +1,4 @@
-<footer>
-    <div class="container-fluid text-center">
-        <hr>
-        <p class="help-block">2021 graduates.</p>
-    </div>
+<footer class="fixed-bottom" style="background-color: white;">
+    <hr>
+    <p class="text-center">2021 graduates.</p>
 </footer>
