--- a/app/View/layout/layout.twig
+++ b/app/View/layout/layout.twig
@@ -5,21 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
     {% block header_scripts_add %}{% endblock %}
-    <!-- BootStrap3 -->
-    <style>
-        .box {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .list-unstyled {
-            line-height: 2;
-        }
-
-        .mb10 {
-            margin: 0 0 10px 0;
-        }
-    </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
     <link rel="stylesheet" href="/assets/css/litera.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -33,7 +18,7 @@
 {% block page_content %}{% endblock %}
 
 <!-- BootStrap3 -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 {# 追加でスクリプトがほしいときにぶっこまれます #}
