--- a/app/View/menu/menu.twig
+++ b/app/View/menu/menu.twig
@@ -25,6 +25,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/item/detail/1">詳細ページ</a>
                     </li>
+                    {# Bootstrapサンプル#}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sample">BT4サンプル</a>
+                    </li>
                     {# ここに↑メニュー追加していく #}
                     <li class="nav-item">
                         <a class="nav-link" href="/logout/">ログアウト</a>
